testsuite/tests/typecheck/should_fail/tcfail078.stderr

tcfail078.hs:5:6: error:
    ‘Integer’ is applied to too many type arguments
    In the type signature: f :: Integer i => i
